<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ulite6_arm_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation support for ulite6 robot including world and launches files</description>
  <maintainer email="crimrami@espol.edu.ec">cristopher-mancilla</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>controller_manager</depend>
  <depend>gripper_controllers</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_ros2_control</depend>
  <depend>python3-numpy</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>
  <depend>xacro</depend>

  <exec_depend>gz_ros2_control_demos</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ulite6_arm_description</exec_depend>
  <exec_depend>uf_ros_lib</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>python_orocos_kdl_vendor</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
